syntax = "proto3";

package grpcController;
option go_package = "wwwin-github.cisco.com/fledge/grpc/pbController";

service ControllerGrpcStore{
  // Sends initialize configuration details to the agent nodes
  rpc InitAgent(ExperimentInfo) returns (Conf) {}
}

message ExperimentInfo{
  string experimentId = 1;
}

message Conf{
  string experimentId = 1;
  ServerInfo server = 2;
}

message ServerInfo{
  string ip = 1;
  uint32 port = 2;
}
